--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                                 <li><a href="proj_cat_farming.html">Farming Projects</a></li>
                                 <li><a href="proj_hotel.html">Hospitality Projects</a></li>
                                 <li><a href="proj_supermarket.html">Trading Industry</a></li>
+                                <li><a href="proj_banking.html">Financial Service</a></li>
                             </ul>
                         </li>
                         <li>
@@ -395,7 +396,7 @@
 
                 <div class="col">
                     <div class="card">
-                        <a href="#">
+                        <a href="proj_banking.html">
                             <img src="assets/img/invest/invest-6.jpg" class="card-img-top" alt="...">
                             <div class="card-body overlay">
                                 <p class="card-text fs-5 text-light">
