--- a/proj_banking.html
+++ b/proj_banking.html
@@ -110,64 +110,74 @@
     <!-- Directors Area -->
     <div class="bg-gray p-2 text-dark bg-opacity-10">
         <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">S L B I Modern Home Appliance Manufacturing</h1>
-            <p class="fs-5 text-justify">
-                S L B I Modern Home Appliance Manufacturing Company; Sri Lanka is ready to mass-produce all types of
-                Modern Home Appliance products with high technology.
+            <h1 class="fw-bolder text-success">S L B I PRIVATE BANKIG SERVICES</h1>
 
-            </p>
-            <p class="text-justify fs-5">
-                The institute will provide training and employment opportunities to young and women in Sri Lanka in the
-                field of Modern Home Appliance products manufacturing with the help of high technology. The company is
-                ready to market its Modern Home Appliance products worldwide.
-            </p>
-            <p class="text-justify fs-5">
-
-                S L B I GROUP Company intends to import and manufacture raw materials and components for the production
-                of this company's products.
-            </p>
-            <div class="row row-cols-1 row-cols-md-4 g-4 mt-3">
+            <div class="row row-cols-1 row-cols-md-4 g-4 my-3">
                 <div class="col">
-                    <img src="assets/img/projects/home/1.jpg" class="card-img-top" alt="Home Appliance Manufacturing">
+                    <img src="assets/img/projects/banking/1.jpg" class="card-img-top" alt="PRIVATE BANKIG SERVICES">
                 </div>
                 <div class="col">
-                    <img src="assets/img/projects/home/2.jpg" class="card-img-top" alt="Home Appliance Manufacturing">
+                    <img src="assets/img/projects/banking/2.jpg" class="card-img-top" alt="PRIVATE BANKIG SERVICES">
                 </div>
                 <div class="col">
-                    <img src="assets/img/projects/home/3.jpg" class="card-img-top" alt="Home Appliance Manufacturing">
+                    <img src="assets/img/projects/banking/3.jpg" class="card-img-top" alt="PRIVATE BANKIG SERVICES">
                 </div>
                 <div class="col">
-                    <img src="assets/img/projects/home/4.jpg" class="card-img-top" alt="Home Appliance Manufacturing">
+                    <img src="assets/img/projects/banking/1.jpg" class="card-img-top" alt="PRIVATE BANKIG SERVICES">
                 </div>
 
             </div>
-            <h3 class="mt-5">Manufacturing and exporting products of this company</h3>
-            <ul class="list-group list-group-flush text-start w-auto">
-                <li class="list-group-item">Air Conditioning</li>
-                <li class="list-group-item">Appliances</li>
-                <li class="list-group-item">Cleaning Appliances
-                </li>
-                <li class="list-group-item">Hand Dryers</li>
-                <li class="list-group-item">Home Appliance Parts
-                </li>
-                <li class="list-group-item">Home Heaters</li>
-                <li class="list-group-item">Kitchen Appliances</li>
-                <li class="list-group-item">Laundry Appliances</li>
-                <li class="list-group-item">Refrigerators & Freezers</li>
-                <li class="list-group-item">Water Heaters</li>
-                <li class="list-group-item">Water Treatment Appliances</li>
-                <li class="list-group-item">Wet Towel</li>
-                <li class="list-group-item">Dispensers</li>
-                <li class="list-group-item">Air Conditioners</li>
-                <li class="list-group-item">Fans</li>
-                <li class="list-group-item"> Vacuum Cleaners</li>
-                <li class="list-group-item">Solar Water Heaters</li>
-                <li class="list-group-item">Cooking Appliances</li>
-                <li class="list-group-item">Coffee Makers</li>
-                <li class="list-group-item">Blenders</li>
 
+            <p class="fs-5 text-justify text-break">
+                Starting Private Banking Services is to provide public with financial services that help people
+                better manage their lives. As technology advances and competition increases, banks are offering
+                different types of services to stay current and attract customers as below mentioned.
+            </p>
 
-            </ul>
+            <p class="fs-5 text-justify text-break">
+                <b> Personal Banking: </b> S L B I Banks typically offer a variety of services to assist individuals in
+                managing
+                their finances, including:
+            </p>
+            <p class="fs-5 text-justify text-break">
+                ⦁ Saving Accounts <br>
+                ⦁ Current Accounts <br>
+                ⦁ Debit and Credit Card <br>
+                ⦁ Farmers Finance <br>
+                ⦁ Home Finance <br>
+                ⦁ Apartment Finance <br>
+                ⦁ Vehicle Finance <br>
+                ⦁ Education Finance <br>
+                ⦁ Travel Finance <br>
+                ⦁ Cash Finance <br>
+
+            </p>
+
+            <p class="fs-5 text-justify text-break">
+                <b> Business Banking: </b> S L B I Banks offer financial services for business owners who need to
+                differentiate
+                professional and personal finances. Different types of business banking services include:
+            </p>
+            <p class="fs-5 text-justify text-break">
+                ⦁ Business Current Account <br>
+                ⦁ Investment finance <br>
+                ⦁ Property Finance <br>
+                ⦁ Working Capital Finance <br>
+                ⦁ Foreign Exchange <br>
+            </p>
+
+            <p class="fs-5 text-justify text-break">
+                <b> Digital Banking: </b> S L B I Bank ability to manage your finances online from your computer,
+                tablet, or smartphone is becoming more and more important to consumers. Banks will typically
+                offer digital banking services that include:
+
+            </p>
+            <p class="fs-5 text-justify text-break">
+                ⦁ Online Banking Services <br>
+                ⦁ Mobile Banking Services <br>
+                ⦁ SMS Alerts <br>
+                ⦁ E-statements <br>
+            </p>
         </div>
     </div>
     <!-- End Directors Area -->
