--- a/founder-message.html
+++ b/founder-message.html
@@ -84,6 +84,7 @@
                                 <li><a href="proj_cat_farming.html">Farming Projects</a></li>
                                 <li><a href="proj_hotel.html">Hospitality Projects</a></li>
                                 <li><a href="proj_supermarket.html">Trading Industry</a></li>
+                                <li><a href="proj_banking.html">Financial Service</a></li>
                             </ul>
                         </li>
                         <li>
