--- a/objectives.html
+++ b/objectives.html
@@ -107,28 +107,7 @@
     </header>
     <!-- End Header -->
 
-    <!-- Directors Area -->
-    <div class="bg-gray p-2 text-dark bg-opacity-10">
-        <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">Renewable Energy</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card">
-                        <a href="#">
-                            <img src="assets/img/projects/solar/1.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p class="card-text fs-5 name">
-                                    S L B I MODERN CENTRALIZED SOLAR POWER PLANT
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- End Directors Area -->
+    <iframe src="assets/profile.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
 
 
     <!-- Start Footer  ============================================= -->
