--- a/proj_banking.html
+++ b/proj_banking.html
@@ -70,8 +70,8 @@
                                 <li><a href="founder-message.html">Founder Message</a></li>
                                 <li><a href="directors.html">Board of Directors</a></li>
                                 <li><a href="vision.html">Our Vision & Missions</a></li>
-                                <li><a href="#">Objective</a></li>
-                                <li><a href="#">Policies</a></li>
+                                <li><a href="objectives.html">Objective</a></li>
+                                <li><a href="policies.html">Policies</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
