--- a/objectives.html
+++ b/objectives.html
@@ -107,7 +107,11 @@
     </header>
     <!-- End Header -->
 
-    <iframe src="assets/profile.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
+    <!-- <iframe src="assets/profile.pdf" style="width: 100%;height: 100%;border: none;"></iframe> -->
+
+    <object data="assets/profile.pdf" type="application/pdf" style="width: 100%;height: 100%;border: none;">
+        <a href="assets/profile.pdf">test.pdf</a>
+    </object>
 
 
     <!-- Start Footer  ============================================= -->
