--- a/objectives.html
+++ b/objectives.html
@@ -109,8 +109,8 @@
 
     <!-- <iframe src="assets/profile.pdf" style="width: 100%;height: 100%;border: none;"></iframe> -->
 
-    <object data="assets/profile.pdf" type="application/pdf" style="width: 100%;height: 100%;border: none;">
-        <a href="assets/profile.pdf">test.pdf</a>
+    <object data="mypdf.pdf" type="application/pdf" frameborder="0" width="100%" height="600px" style="padding: 20px;">
+        <embed src="assets/profile.pdf" width="100%" height="600px" />
     </object>
 
 
