--- a/directors.html
+++ b/directors.html
@@ -159,6 +159,21 @@
                 </div>
                 <div class="col">
                     <div class="card">
+                        <a href="muba.html">
+                            <img src="assets/img/team/6.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay team">
+                                <p class="card-text fs-5 name">
+                                    Ronald Smith
+                                    <span class="designation">
+                                        Director <br> Projects Development
+                                    </span>
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
                         <a href="nath.html">
                             <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
                             <div class="card-body overlay team">
