--- a/objectives.html
+++ b/objectives.html
@@ -107,11 +107,10 @@
     </header>
     <!-- End Header -->
 
-    <!-- <iframe src="assets/profile.pdf" style="width: 100%;height: 100%;border: none;"></iframe> -->
+    <iframe src="https://docs.google.com/document/d/1JOa1vPh7FnH8OTTwKoXsM1mbO1NorusYYkI8si_C8UI/view?usp=sharing"
+        style="width: 100%;height: 100%;border: none;"></iframe>
 
-    <object data="mypdf.pdf" type="application/pdf" frameborder="0" width="100%" height="600px" style="padding: 20px;">
-        <embed src="assets/profile.pdf" width="100%" height="600px" />
-    </object>
+
 
 
     <!-- Start Footer  ============================================= -->
