--- a/objectives.html
+++ b/objectives.html
@@ -108,7 +108,7 @@
     <!-- End Header -->
 
     <iframe src="https://docs.google.com/document/d/1JOa1vPh7FnH8OTTwKoXsM1mbO1NorusYYkI8si_C8UI/view?usp=sharing"
-        style="width: 100%;height: 100%;border: none;"></iframe>
+        style="width: 100%;height: 720px;border: none;"></iframe>
 
 
 
