--- a/objectives.html
+++ b/objectives.html
@@ -107,9 +107,8 @@
     </header>
     <!-- End Header -->
 
-    <iframe src="https://docs.google.com/document/d/1JOa1vPh7FnH8OTTwKoXsM1mbO1NorusYYkI8si_C8UI/view?usp=sharing"
-        style="width: 100%;height: 720px;border: none;"></iframe>
-
+    <iframe src="https://drive.google.com/file/d/1B9n5tRzPO_PZdv2zoa117YHA-ey1Hb6A/preview" width="100%" height="100%"
+        allow="autoplay"></iframe>
 
 
 
