--- a/policies.html
+++ b/policies.html
@@ -107,7 +107,9 @@
     </header>
     <!-- End Header -->
 
-    <iframe src="assets/profile.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
+    <iframe src="https://drive.google.com/file/d/1B9n5tRzPO_PZdv2zoa117YHA-ey1Hb6A/preview" width="100%" height="100%"
+        allow="autoplay"></iframe>
+
 
 
     <!-- Start Footer  ============================================= -->
