--- a/ronald.html
+++ b/ronald.html
@@ -107,107 +107,47 @@
     </header>
     <!-- End Header -->
 
-    <!-- Directors Area -->
-    <div class="bg-gray p-2 text-dark bg-opacity-10">
-        <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">Our Board of Directors</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card">
-                        <a href="rifai.html">
-                            <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p href="#" class="card-text fs-5 name">
-                                    Prof. Rifaitheen Naidu <br> (MBA, PMP, DBA)
-                                    <span class="designation">
-                                        Founder & CEO
-                                    </span>
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <a href="muza.html">
-                            <img src="assets/img/team/2.jpg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p class="card-text fs-5 name">
-                                    Mohamed Muzammil
-                                    <span class="designation">
-                                        Co-Founder/Director/ <br> Chief Finance Officer
-                                    </span>
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <a href="muba.html">
-                            <img src="assets/img/team/4.jpg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p class="card-text fs-5 name">
-                                    Muhammed Mubarak
-                                    <span class="designation">
-                                        Co-Founder/Director/ <br> Chief Administrative Officer
-                                    </span>
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <a href="ronald.html">
-                            <img src="assets/img/team/6.jpg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p class="card-text fs-5 name">
-                                    Ronald Smith
-                                    <span class="designation">
-                                        Director <br> Projects Development
-                                    </span>
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <a href="nath.html">
-                            <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p class="card-text fs-5 name">
-                                    A. Natheer Ahamed
-                                    <span class="designation">
-                                        Director <br> Business Development
-                                    </span>
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <a href="chand.html">
-                            <img src="assets/img/team/5.jpg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p class="card-text fs-5 name">
-                                    Chandrakala Ramanan
-                                    <span class="designation">
-                                        Director <br> SLBI Group LLC, Switzerland
-                                    </span>
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+    <!-- Start Single Team ============================================= -->
+    <div class="container py-5">
+        <div class="title mb-4">
+            <span class="name d-block display-6 fw-bold">Ronald Smith</span>
+            <span class="designation fs-4">Director – Project Development</span>
+        </div>
+        <div class="row team-single">
+            <div class="col-lg-5">
+                <img src="assets/img/team/6.jpg" class="mb-4" alt="founder">
+            </div>
 
+            <div class="col-lg-7">
+                <p class="fs-3">Overview</p>
+                <p class="text-justify">
+                    Being Director – Project Development his concerned is typically the project’s point person, managing
+                    resources and overseeing finances to ensure that the project progresses on time and on budget. The
+                    director reviews regular progress reports and makes staffing, financial, or other adjustments to
+                    align the developing project with broader outcome goals.
+                </p>
+
+                <p class="fs-3 mt-4">Experience</p>
+                <p class="text-justify">
+                    Having more than 15 years’ experience in entrepreneurship, management, sales, marketing, and project
+                    development various companies. He has the extent and gravity of experience to quickly understand
+                    entrepreneurs’ business and craft the most suitable solutions.
+
+                </p>
+                <p class="fs-3 mt-4">Education</p>
+
+                <p class="text-justify">
+                    Bachelor of Project Management, Diploma in Human Resource Managements (HRM), Diploma in Information
+                    Technology
+                </p>
 
             </div>
         </div>
+
     </div>
-    <!-- End Directors Area -->
+
+    <!-- End Start Single Team -->
+
 
 
     <!-- Start Footer  ============================================= -->
@@ -237,7 +177,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I Group</a>
+                        <p>&copy; Copyright 2022. All Rights Reserved by <a target="_blank" href="#">S L B I
+                                Group</a>
                         </p>
                     </div>
                 </div>
