--- a/objectives.html
+++ b/objectives.html
@@ -107,8 +107,8 @@
     </header>
     <!-- End Header -->
 
-    <iframe src="https://drive.google.com/file/d/1B9n5tRzPO_PZdv2zoa117YHA-ey1Hb6A/preview" width="100%" height="100%"
-        allow="autoplay"></iframe>
+    <iframe src="https://drive.google.com/file/d/11twSTOm0tMkOWRL6RjrwV7F23ZyY2PrR/preview" style="height: 600px;"
+        width="100%" height="100%" allow="autoplay"></iframe>
 
 
 
