--- a/policies.html
+++ b/policies.html
@@ -107,9 +107,8 @@
     </header>
     <!-- End Header -->
 
-    <iframe src="https://drive.google.com/file/d/1B9n5tRzPO_PZdv2zoa117YHA-ey1Hb6A/preview" width="100%" height="100%"
-        allow="autoplay"></iframe>
-
+    <iframe src="https://drive.google.com/file/d/1q5aV1-a_L8LGlSQkzas-IZ2Ptpgji_LP/preview" style="height: 600px;"
+        width="100%" height="100%" allow="autoplay"></iframe>
 
 
     <!-- Start Footer  ============================================= -->
