--- a/objectives.html
+++ b/objectives.html
@@ -107,6 +107,9 @@
     </header>
     <!-- End Header -->
 
+    <h1 class="fw-bolder text-success text-center mt-3">Objectives</h1>
+
+
     <iframe src="https://drive.google.com/file/d/11twSTOm0tMkOWRL6RjrwV7F23ZyY2PrR/preview" style="height: 600px;"
         width="100%" height="100%" allow="autoplay"></iframe>
 
