--- a/policies.html
+++ b/policies.html
@@ -107,6 +107,9 @@
     </header>
     <!-- End Header -->
 
+    <h1 class="fw-bolder text-success text-center mt-3">Policies</h1>
+
+
     <iframe src="https://drive.google.com/file/d/1q5aV1-a_L8LGlSQkzas-IZ2Ptpgji_LP/preview" style="height: 600px;"
         width="100%" height="100%" allow="autoplay"></iframe>
 
