--- a/aboutus.html
+++ b/aboutus.html
@@ -87,7 +87,7 @@
 
                     </li>
                     <li>
-                        <a href="#">Partners and Sponsors</a>
+                        <a href="partner_sponsor.html">Partners and Sponsors</a>
 
                     </li>
                     <li>
