--- a/directors.html
+++ b/directors.html
@@ -91,7 +91,7 @@
 
                         </li>
                         <li>
-                            <a href="#">Partners and Sponsors</a>
+                            <a href="partner_sponsor.html">Partners and Sponsors</a>
 
                         </li>
                         <li>
@@ -108,7 +108,7 @@
     <!-- End Header -->
 
     <!-- Directors Area -->
-    <div class="bg-gray p-2 text-dark bg-opacity-10">
+    <div class=" p-2 text-dark bg-opacity-10">
         <div class="container py-5 text-center ">
             <h1 class="fw-bolder text-success">Our Board of Directors</h1>
             <div class="row row-cols-1 row-cols-md-3 g-3">
