--- a/partner_sponsor.html
+++ b/partner_sponsor.html
@@ -110,21 +110,42 @@
     <!-- Directors Area -->
     <div class="bg-gray p-2 text-dark bg-opacity-10">
         <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">Renewable Energy</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card">
-                        <a href="#">
-                            <img src="assets/img/projects/solar/1.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body overlay team">
-                                <p class="card-text fs-5 name">
-                                    S L B I MODERN CENTRALIZED SOLAR POWER PLANT
-                                </p>
-                            </div>
-                        </a>
+            <h1 class="fw-bolder text-success">PARTNERS</h1>
+            <img src="assets/img/sponsor/1.jpg" class="img-fluid rounded-start" style="width: 350px;" alt="...">
+            <h1 class="fw-bolder text-success mt-5">Sponsors</h1>
+
+            <div class="row">
+                <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
+                    <div class="col">
+                        <img src="assets/img/sponsor/2.jpg" class="card-img-top" alt="Sponsors">
+                        <p class="text-dark fs-5 mt-4">
+                            <b> Bluenergy Germany AG </b> <br>
+                            Industrie Straße 29, D-42929 Wermelskirchen, <br>
+                            Germany <br>
+                            www.bluenergy-ag.net
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/sponsor/3.jpg" class="card-img-top" alt="Sponsors">
+                        <p class="text-dark fs-5 mt-4">
+                            <b> ADVANCE REAL ESTATE</b> <br>
+                            AL BARSHA BUSINESS SQUARE, <br>
+                            OFFICE NO. 201 – AL BARSHA, <br>
+                            P.O. Box 50330<br>
+                            Dubai - UAE
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/sponsor/4.jpg" class="card-img-top" alt="Sponsors">
+                        <p class="text-dark fs-5 mt-4">
+                            <b> PETROSCANZ (PSZ)</b> <br>
+                            Office # 6WB-148, <br>
+                            Dubai Airport Free Zone, <br>
+                            Dubai, UAE <br>
+                            http://www.petroscaninspection.com
+                        </p>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
