--- a/partner_sponsor.html
+++ b/partner_sponsor.html
@@ -112,14 +112,14 @@
         <div class="container py-5 text-center ">
             <h1 class="fw-bolder text-success">PARTNERS</h1>
             <img src="assets/img/sponsor/1.jpg" class="img-fluid rounded-start" style="width: 350px;" alt="...">
-            <h1 class="fw-bolder text-success mt-5">Sponsors</h1>
+            <h1 class="fw-bolder text-success mt-5">SPONSORS</h1>
 
             <div class="row">
                 <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
                     <div class="col">
                         <img src="assets/img/sponsor/2.jpg" class="card-img-top" alt="Sponsors">
                         <p class="text-dark fs-5 mt-4">
-                            <b> Bluenergy Germany AG </b> <br>
+                            <b> BLUNERGY GERMANY AG </b> <br>
                             Industrie Straße 29, D-42929 Wermelskirchen, <br>
                             Germany <br>
                             www.bluenergy-ag.net
