--- a/partner_sponsor.html
+++ b/partner_sponsor.html
@@ -114,37 +114,35 @@
             <img src="assets/img/sponsor/1.jpg" class="img-fluid rounded-start" style="width: 350px;" alt="...">
             <h1 class="fw-bolder text-success mt-5">SPONSORS</h1>
 
-            <div class="row">
-                <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
-                    <div class="col">
-                        <img src="assets/img/sponsor/2.jpg" class="card-img-top" alt="Sponsors">
-                        <p class="text-dark fs-5 mt-4">
-                            <b> BLUNERGY GERMANY AG </b> <br>
-                            Industrie Straße 29, D-42929 Wermelskirchen, <br>
-                            Germany <br>
-                            www.bluenergy-ag.net
-                        </p>
-                    </div>
-                    <div class="col">
-                        <img src="assets/img/sponsor/3.jpg" class="card-img-top" alt="Sponsors">
-                        <p class="text-dark fs-5 mt-4">
-                            <b> ADVANCE REAL ESTATE</b> <br>
-                            AL BARSHA BUSINESS SQUARE, <br>
-                            OFFICE NO. 201 – AL BARSHA, <br>
-                            P.O. Box 50330<br>
-                            Dubai - UAE
-                        </p>
-                    </div>
-                    <div class="col">
-                        <img src="assets/img/sponsor/4.jpg" class="card-img-top" alt="Sponsors">
-                        <p class="text-dark fs-5 mt-4">
-                            <b> PETROSCANZ (PSZ)</b> <br>
-                            Office # 6WB-148, <br>
-                            Dubai Airport Free Zone, <br>
-                            Dubai, UAE <br>
-                            http://www.petroscaninspection.com
-                        </p>
-                    </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4 ">
+                <div class="col">
+                    <img src="assets/img/sponsor/2.jpg" class="card-img-top" alt="Sponsors">
+                    <p class="text-dark fs-5 mt-4">
+                        <b> BLUNERGY GERMANY AG </b> <br>
+                        Industrie Straße 29, D-42929 Wermelskirchen, <br>
+                        Germany <br>
+                        www.bluenergy-ag.net
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="assets/img/sponsor/3.jpg" class="card-img-top" alt="Sponsors">
+                    <p class="text-dark fs-5 mt-4">
+                        <b> ADVANCE REAL ESTATE</b> <br>
+                        AL BARSHA BUSINESS SQUARE, <br>
+                        OFFICE NO. 201 – AL BARSHA, <br>
+                        P.O. Box 50330<br>
+                        Dubai - UAE
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="assets/img/sponsor/4.jpg" class="card-img-top" alt="Sponsors">
+                    <p class="text-dark fs-5 mt-4">
+                        <b> PETROSCANZ (PSZ)</b> <br>
+                        Office # 6WB-148, <br>
+                        Dubai Airport Free Zone, <br>
+                        Dubai, UAE <br>
+                        http://www.petroscaninspection.com
+                    </p>
                 </div>
             </div>
         </div>
