--- a/objectives.html
+++ b/objectives.html
@@ -237,7 +237,14 @@
             <span>
                 <li class="fw-bold">Electrical Equipment & Supplies</li>
 
-
+                <p class="text-justify">
+                    Solar Energy Products, Batteries, Electrical Instruments, Circuit Breakers, Connectors &
+                    Terminals Industrial Controls, Contactors, Motors Electrical Supplies, Electronic &
+                    Instrument Enclosures, Fuse Components, Fuses Generators, Power Accessories, Power
+                    Distribution Equipment Power Supplies, Professional Audio, Video & Lighting Relays,
+                    Switches, Transformers, Wires, Cables & Cable Assemblies, Wiring Accessories, Solar
+                    Cells, Solar Panel.
+                </p>
             </span>
 
             <span>
@@ -531,9 +538,7 @@
 
                 diverse array of businesses around the world in numerous sectors, and is named as one of
                 the world's most admired companies Catalog / Sales mobile application (hereinafter
-                collectively referred to as “App“) is owned by S L B I GROUP (PVT) LTD, a company
-                incorporated under the Companies Act, 2007with its registered office NO. 312, V.C ROAD
-                PERIYA NEELAVANAI, MARUTHAMUNAI, SRI LANKA. (Hereinafter referred to as “
+                collectively referred to as “App“) is owned by S L B I GROUP (PVT) LTD.
             </p>
             <p class="text-justify">
                 S L B I GROUP (PVT) LTD “Users (hereinafter referred to as “Merchants” or just as “You” or
@@ -636,8 +641,8 @@
         </div>
     </div>
 
-
-    <!-- <iframe src="https://drive.google.com/file/d/11twSTOm0tMkOWRL6RjrwV7F23ZyY2PrR/preview" style="height: 600px;"
+    <!-- 
+    <iframe src="https://drive.google.com/file/d/11twSTOm0tMkOWRL6RjrwV7F23ZyY2PrR/preview" style="height: 600px;"
         width="100%" height="100%" allow="autoplay"></iframe> -->
 
 
